# bibliotek

./: .gitignore  .piko.yml  Cargo.toml  Makefile  RESUMABLE_UPLOADS_DESIGN.md  UPLOAD_FIXES_PLAN.md  claude.md  com.gwuah.bibliotek.plist  conductor.json  config.example.yaml  config.yaml  mono.yml  notes.md  readme.md  run_migrations.sh  rustfmt.toml  task.md
docs/: daemon-and-bundling.md  daemon-setup.md  debugging.md  light-sync-implementation.md  technical-impl.md  true-sync-design.md
light/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
pdf/: main.py  pyproject.toml
src/: api.rs  assets.rs  config.rs  db.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  pdf_extract.rs  resumable.rs  s3.rs  schema.sql  sync.rs
src/commonplace/: handler.rs  lib.rs  mod.rs  routes.rs
src/commonplace/migrations/: 001_schema.sql  002_external_id.sql  003_sync_metadata.sql  004_resource_config.sql
src/light/: handler.rs  mod.rs  routes.rs
src/migrations/: 001_schema.sql  002_categories.sql  002_seed_categories.sql  003_add_book_status.sql  003_seed_db.sql
src/migrations/system/: 000_migrations_table.sql
src/research/: handler.rs  mod.rs  routes.rs
src/research/migrations/: 001_config.sql
web/: index.html  package-lock.json  package.json  simple.js  usage.js  vite.config.js
web/css/: output.css  style.css
web/js/: app.js
web/static/: books.json  index.html
web/static/css/: output.css  style.css
web/static/js/: App.jsx  HighlightsPage.jsx  ResearchPage.jsx  components.js  setup.js
web/static/js/components/: BookList.jsx  BookRow.jsx  BooksPage.jsx  MassUploader.jsx  MultiSelect.jsx
web/static/js/components/research/: ChapterEditor.jsx  ChapterSidebar.jsx  ConfigPanel.jsx  ResourceDetail.jsx  ResourceList.jsx  SyncStats.jsx
