[package]
name = "bibliotek"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio-util = "0.7.16"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
libsql = { version = "0.9.29", default-features = false, features = ["core", "remote", "replication", "sync", "tls"] }
serde_json = "1.0.142"
futures-util = "0.3.31"
aws-config = {version = "1.8.4", features =  ["behavior-version-latest"] }
aws-sdk-s3 = "1.101.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rust-embed = "8"
mime_guess = "2"
dirs = "6"
hex = "0.4"
urlencoding = "2.1"
dotenvy = "0.15.7"
